# omarchy-display-control-center

./: .gitignore  CMakeLists.txt  display-control.py  main.cpp  readme.md
src/: display_settings.cpp  display_settings.hpp  main.cpp  theme_manager.cpp  theme_manager.hpp
